<resources>
    <string name="app_name">ProtonSdkDemo</string>
    <string name="proton_sdk_test">Proton SDK Test</string>
    <string name="chain_provider">Chain Provider</string>
    <string name="account_information">Account Information</string>
    <string name="get_proton_account">Get Proton Account</string>
    <string name="fetch_token_balances">Fetch Token Balances</string>
    <string name="transaction_history">Transaction History</string>
    <string name="update_account">Update Account</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="chain_url">Chain Url</string>
    <string name="explorer_name">Explorer Name</string>
    <string name="explorer_url">Explorer Url</string>
    <string name="icon_url">Icon Url</string>
    <string name="resource_token_symbol">Resource Token Symbol</string>
    <string name="resource_token_contract">Resource Token Contract</string>
    <string name="system_token_symbol">System Token Symbol</string>
    <string name="system_token_contract">System Token Contract</string>
    <string name="is_testnet">Is Testnet</string>
    <string name="head_block_num">Head Block Num</string>
    <string name="head_block_time">Head Block Time</string>
    <string name="privileged">Privileged</string>
    <string name="last_code_update">Last Code Update</string>
    <string name="created">Created</string>
    <string name="no_data">No Data</string>
    <string name="token_contracts">Token Contracts</string>
    <string name="id">ID</string>
    <string name="precision_symbol">precision Symbol</string>
    <string name="black_listed">Black Listed</string>
    <string name="core_liquid_balance">Core Liquid Balance</string>
    <string name="ram_quota">Ram Quota</string>
    <string name="net_weight">Net Weight</string>
    <string name="cpu_weight">Cpu Weight</string>
    <string name="ram_usage">Ram Usage</string>
    <string name="make_it_active">Make It Active</string>
    <string name="active">Active</string>
</resources>