<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/chain_provider"
            style="@style/ButtonStyle"
            android:text="@string/chain_provider" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/proton_account"
            style="@style/ButtonStyle"
            android:text="@string/get_proton_account" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/token_contracts"
            style="@style/ButtonStyle"
            android:text="@string/token_contracts" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/token_balances"
            style="@style/ButtonStyle"
            android:text="@string/fetch_token_balances" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/transaction_history"
            style="@style/ButtonStyle"
            android:text="@string/transaction_history" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_account"
            style="@style/ButtonStyle"
            android:text="@string/update_account" />

    </LinearLayout>
</layout>