<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.esf.protonsdkdemo.viewmodels.AccountViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="4dp"
        app:cardForegroundColor="#00000000"
        app:cardUseCompatPadding="true"
        app:contentPadding="20dp"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextHeading"
                    android:text="@string/name" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_width="match_parent"
                    android:layout_marginStart="12dp"
                    android:gravity="end"
                    android:text="@{viewModel.name}"
                    tools:text="Name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextHeading"
                    android:text="@string/head_block_num" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_width="match_parent"
                    android:layout_marginStart="12dp"
                    android:gravity="end"
                    android:text="@{String.valueOf(viewModel.headBlockNum)}"
                    tools:text="Name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextHeading"
                    android:text="@string/head_block_time" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_width="match_parent"
                    android:layout_marginStart="12dp"
                    android:gravity="end"
                    android:text="@{viewModel.headBlockTime}"
                    tools:text="Name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextHeading"
                    android:text="@string/privileged" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_width="match_parent"
                    android:layout_marginStart="12dp"
                    android:gravity="end"
                    android:text="@{String.valueOf(viewModel.privileged)}"
                    tools:text="Name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextHeading"
                    android:text="@string/last_code_update" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_width="match_parent"
                    android:layout_marginStart="12dp"
                    android:gravity="end"
                    android:text="@{viewModel.lastCodeUpdate}"
                    tools:text="Name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextHeading"
                    android:text="@string/created" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_width="match_parent"
                    android:layout_marginStart="12dp"
                    android:gravity="end"
                    android:text="@{viewModel.created}"
                    tools:text="created" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextHeading"
                    android:text="@string/core_liquid_balance" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_width="match_parent"
                    android:layout_marginStart="12dp"
                    android:gravity="end"
                    android:text="@{viewModel.coreLiquidBalance}"
                    tools:text="coreLiquidBalance" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextHeading"
                    android:text="@string/ram_quota" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_width="match_parent"
                    android:layout_marginStart="12dp"
                    android:gravity="end"
                    android:text="@{String.valueOf(viewModel.ramQuota)}"
                    tools:text="ramQuota" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextHeading"
                    android:text="@string/net_weight" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_width="match_parent"
                    android:layout_marginStart="12dp"
                    android:gravity="end"
                    android:text="@{String.valueOf(viewModel.netWeight)}"
                    tools:text="ramQuota" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextHeading"
                    android:text="@string/cpu_weight" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_width="match_parent"
                    android:layout_marginStart="12dp"
                    android:gravity="end"
                    android:text="@{String.valueOf(viewModel.cpuWeight)}"
                    tools:text="cpuWeight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextHeading"
                    android:text="@string/ram_usage" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_width="match_parent"
                    android:layout_marginStart="12dp"
                    android:gravity="end"
                    android:text="@{String.valueOf(viewModel.ramUsage)}"
                    tools:text="cpuWeight" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/active"
                style="@style/ButtonStyle"
                android:layout_width="174dp"
                android:layout_gravity="bottom|end"
                android:layout_marginTop="12dp"
                android:text="@string/make_it_active" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>